--- a/docker_imgs/biopython_biocode/Dockerfile
+++ b/docker_imgs/biopython_biocode/Dockerfile
@@ -2,7 +2,9 @@
 FROM python:bullseye
 
 # install biocode
-RUN pip3 install biopython
+RUN pip3 install biopython==1.81
 RUN pip3 install biocode
 RUN pip3 install numpy
 RUN pip3 install pandas
+RUN pip3 install biopython-convert
+
